0025370: Visualization - misprint in PrsMgr_PresentationManager::Connect()

fix theMode -> theOtherMode